// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns "undefined" if no filled imbalanced line exist 1`] = `undefined`;

exports[`returns "undefined" if no filled imbalanced line exist 2`] = `undefined`;

exports[`returns "undefined" if no filled imbalanced line exist 3`] = `undefined`;

exports[`returns "undefined" if no filled imbalanced line exist 4`] = `undefined`;

exports[`selects filled imbalanced line 1`] = `1`;

exports[`selects filled imbalanced line 2`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟥} {🟦}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects filled imbalanced line 3`] = `1`;

exports[`selects filled imbalanced line 4`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟥} {🟥}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects filled imbalanced line 5`] = `0`;

exports[`selects filled imbalanced line 6`] = `
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟦} [⬜] [⬜]
`;

exports[`selects filled imbalanced line 7`] = `0`;

exports[`selects filled imbalanced line 8`] = `
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
`;
